src/components/card-dropdown-menu/card-dropdown-menu.module.css
.dropdown-menu {
    flex: 0 0 auto;
    position: relative;
}

.dropdown-menu__options {
    border-radius: 5px;
    border: 1px solid black;
    min-width: 100px;
    height: auto;
    background-color: rgb(255, 255, 255);
    top: 100%;
    right: 100%;
    position: absolute;
    z-index: 1000;
}

.dropdown-menu__options-button {
    background-color: transparent;
    outline: transparent;
    border: none;
    transition: 0.3s;
}

.dropdown-menu__options-button:hover {
    background-color: rgb(241, 240, 240);
    border-radius: 5px;
}

.dropdown-menu__list {
    list-style: none;
}

.dropdown-menu__link {
    display: block;
    padding: 10px;
    width: 100%;
}

.dropdown-menu__button {
    display: block;
    padding: 10px;
    width: 100%;
    background-color: transparent;
    font-size: inherit;
    text-align: left;
    border: none;
    cursor: pointer;
}

.dropdown-menu__link:hover,
.dropdown-menu__button:hover {
    background-color: rgb(241, 240, 240);
}

.dropdown-menu__list-item {
    border-bottom: 1px solid #EEEEEE;
    margin-left: 5px;
    margin-right: 5px;
}

.dropdown-menu__list-item:last-child {
    border-bottom: none;
}

.dropdown-menu__options.position-center
{
    top: 100%;
    left: 50%;
    transform: translateX(-50%);
}

